--- a/hoo-grades/package.json
+++ b/hoo-grades/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
+    "openai": "^4.29.2",
     "react": "^18",
     "react-dom": "^18"
   },
